--- a/2DS.htm
+++ b/2DS.htm
@@ -36,99 +36,109 @@
   <table>
     <tr>
       <td>M1 L1</td>
-      <td>Data Structures, Classification of Data Structures, Data Structres operations.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/sPTpClcwsbs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Data Structures, Classification of Data Structures, Data Structres operations.</td>   
     </tr>
     <tr>
       <td>M1 L2.1</td>
-      <td>Introduction to Arrays, Structures, Nested Structures.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/M1ZRl4d7_XY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
+        <td><iframe width="310" height="180" src="https://www.youtube.com/embed/M1ZRl4d7_XY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <td>Introduction to Arrays, Structures, Nested Structures.</td> 
+      </tr>
     <tr>
       <td> L2.2</td>
-      <td>Structure Operations,Self Referential Structure,Union.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/3TBrP0nOwo4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
+         <td><iframe width="310" height="180" src="https://www.youtube.com/embed/3TBrP0nOwo4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+         <td>Structure Operations,Self Referential Structure,Union.</td>
+     </tr>
     <tr>
       <td>M1 L3</td>
-      <td>Pointers and Dynamic Memory Allocation.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/vcpUIcTAFks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
+         <td><iframe width="310" height="180" src="https://www.youtube.com/embed/vcpUIcTAFks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+         <td>Pointers and Dynamic Memory Allocation.</td>
+      </tr>
     <tr>
       <td>M1 L4</td>
-      <td>Dynamically Allocated Arrays,One-Dimensional Arrays, Two-Dimensional Arrays.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/0nXxVtoLf6s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Dynamically Allocated Arrays,One-Dimensional Arrays, Two-Dimensional Arrays.</td> 
     </tr>
     <tr>
       <td>M1 L5</td>
-      <td>ARRAY OPERATIONS:Traversing, Inserting, Deleting, Sorting and Searching</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/66ZRH2cfRR0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
+       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/66ZRH2cfRR0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+       <td>ARRAY OPERATIONS:Traversing, Inserting, Deleting, Sorting and Searching</td>
+      </tr>
     <tr>
       <td>M1 L6</td>
-      <td> Polynomials and Sparse Matricies.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/f9vjC7FDNBA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td> Polynomials and Sparse Matricies.</td>
     </tr>
     <tr>
       <td>M1 L7.1</td>
-      <td>Strings and Storing of Strings.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/NDmS7W0MDLU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Strings and Storing of Strings.</td>
     </tr>
     <tr>
       <td>M1 L7.2</td>
-      <td>Different types of Pattern Matching Algorithms.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/4r1PFvtQbIY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Different types of Pattern Matching Algorithms.</td>
     </tr>
     <tr>
       <td>M2 L1</td>
-      <td>Definition, Stack Operations, Array Representation of Stacks, Stacks using Dynamic Arrays.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/W3-ZUJG7wB0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Definition, Stack Operations, Array Representation of Stacks, Stacks using Dynamic Arrays.</td>
     </tr>
     <tr>
       <td>M2 L2</td>
-      <td>Polish notation Infix to postfix conversion.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/GPEQidLrgOE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Polish notation Infix to postfix conversion.</td>
     </tr>
     <tr>
       <td>M2 L3</td>
-      <td>Evaluation of postfix expression</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/mz9XEbAYzrY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Evaluation of postfix expression</td>
     </tr>
     <tr>
       <td>M2 L4.1</td>
-      <td>Recursion, Factorial</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/BdA4BEZE9Rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Recursion, Factorial</td>
     </tr>
     <tr>
       <td>M2 L4.2</td>
-      <td>GCD, Fibonacci Sequence</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Gvf2cjcrZKY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>GCD, Fibonacci Sequence</td>
     </tr>
     <tr>
       <td>M2 L5</td>
-      <td>Tower of Hanoi, Ackerman's function</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/i0akTu-D9cI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>GCD, Fibonacci Sequence</td>
     </tr>
     <tr>
       <td>M2 L6</td>
-      <td>Definition, Array Representation, Queue Operations, Circular Queues</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/vAKtmvkEDXQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Definition, Array Representation, Queue Operations, Circular Queues</td>
     </tr>
     <tr>
       <td>M2 L7.1</td>
-      <td>Circular queues, Circular queues using Dynamic arrays</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/gfGt197U6do" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Circular queues, Circular queues using Dynamic arrays</td>
+    </tr>
+    <tr>
+      <td>M2 L7.2.1</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/wIKd3y4kDqk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Dequeues, Priority Queues, A Mazing Problem</td>
     </tr>
     <tr>
       <td></td>
-      <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td></td>
     </tr>
     <tr>
       <td></td>
+      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td></td>
+    </tr>
+    <tr>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
+      <td></td>
+    </tr>    
   </table>
 
 </body>
