--- a/2DSL.htm
+++ b/2DSL.htm
@@ -74,39 +74,34 @@
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/ctKmv4-mng0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>E7 L1</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/4Ty01CaeZZA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Implementation of program in C  for Singly Linked List of Characters (PART 1).</td>
+    </tr>
+    <tr>
+      <td>E7 L2</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/G_HkKiNsFUI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Implementation of program in C  for Singly Linked List of Characters (PART 2).</td>
     </tr>
     <tr>
       <td></td>
-      <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td></td>
     </tr>
     <tr>
       <td></td>
-      <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td></td>
     </tr>
     <tr>
       <td></td>
-      <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td></td>
     </tr>
     <tr>
       <td></td>
-      <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
       <td></td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 
