--- a/2CSE.htm
+++ b/2CSE.htm
@@ -43,11 +43,11 @@
   }
 
   a:hover {
-    text-decoration: underline;
+    text-decoration:solid;
   }
 
   a:active {
-    text-decoration: underline;
+    text-decoration: solid;
   }
 
   .sidenav {
