--- a/3ECED.htm
+++ b/3ECED.htm
@@ -113,6 +113,11 @@
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/KClQzWzIqtk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
       <td>Effect of current because of holes and electron and magnetic fiels inside the semiconductor.</td>
     </tr>
+    <tr>
+      <td>M2 L3</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/QgUxBOGR9-o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>An ideal diode can be placed in series with an a-c voltage source to provide rectification of the signal. Since current can flow only in the forward direction through the diode, only the positive half-cycles of the input sine wave are passed. The output voltage is a half-rectified sine wave.</td>
+    </tr>
   </table>
 
 </body>
