--- a/2CSE.htm
+++ b/2CSE.htm
@@ -152,7 +152,7 @@
           </tr>
           <tr>
             <td>3.</td>
-            <td><a href="2ADE.htm">Analog and Digital Electronics (ADE).</a></td>
+            <td><a href="2ADEM2.htm">Analog and Digital Electronics (ADE).</a></td>
           </tr>
           <tr>
             <td>4.</td>
