--- a/index.htm
+++ b/index.htm
@@ -174,7 +174,7 @@
           </tr>
           <tr>
             <td>2.</td>
-            <td><a href="2CSE.htm">3 SEM CSE.</a></td>
+            <td><a href="2 YR CSE\2CSE.htm">3 SEM CSE.</a></td>
           </tr>
           <tr>
             <td>3.</td>
