--- a/index.htm
+++ b/index.htm
@@ -170,7 +170,7 @@
           </tr>
           <tr>
             <td>1.</td>
-            <td><a href="5CSE.htm">5 SEM CSE.</a></td>
+            <td><a href="3 YR CSE\5CSE.htm">5 SEM CSE.</a></td>
           </tr>
           <tr>
             <td>2.</td>
@@ -178,7 +178,7 @@
           </tr>
           <tr>
             <td>3.</td>
-            <td><a href="3EC.htm">3 SEM ECE.</a></td>
+            <td><a href="2 YR ECE\3EC.htm">3 SEM ECE.</a></td>
           </tr>
 
         </table>
