--- a/2 YR CSE/2DS/2DS.htm
+++ b/2 YR CSE/2DS/2DS.htm
@@ -1,145 +1,158 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="..\..\responsive.css">
-  <title>DS</title>
+  <title="DS">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
+<style>
+  * {
+    margin: -2;
+  }
+
+  body {
+    background-color: #f7f7ee;
+  }
+
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  td,
+  th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+    text-decoration: none;
+  }
+
+
+  table th {
+    background-color: white;
+    color: black;
+  }
+
+  a:link {
+    text-decoration: none;
+  }
+
+  a:visited {
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration:wavy;
+  }
+
+  a:active {
+    text-decoration: wavy;
+  }
+
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #b6eb7a;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
+
+  @media screen and (max-height: 450px) {
+    .sidenav {
+      padding-top: 15px;
+    }
+
+    .sidenav a {
+      font-size: 18px;
+    }
+  }
+
+  header {
+    background-color: #b6eb7a;
+    padding: 10px;
+    border: none;
+    font-size: 20px;
+  }
+
+  footer {
+    padding: 30px;
+    background-color: #17706e;
+    color: black;
+  }
+</style>
 
 <body>
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="index.htm">Home</a>
-    <a href="2CSE.htm">3 SEM CS</a>
-    <a href="CONTACT.htm">Contact</a>
-  </div>
-  <script>
-    function openNav() {
-      document.getElementById("mySidenav").style.width = "250px";
-    }
 
-    function closeNav() {
-      document.getElementById("mySidenav").style.width = "0";
-    }
-  </script>
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <a href="index.htm">Home</a>
+          <a href="2CSE.htm">3 SEM CS</a>
+          <a href="CONTACT.htm">Contact</a>
+        </div>
+        <header>
+          <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
+        </header>
+        <br>
+        <marquee>updated 12/10/2020</marquee>
+        <br>
+        <script>
+          function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+          }
 
-  <header>
-    <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
-  </header>
+          function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+          }
+        </script>
+        <br>
+        <table>
+          <tr>
+            <th>SR NO</th>
+            <th>MODULE</th>
+          </tr>
+          <tr>
+            <td>1.</td>
+            <td><a href="2DSM1.htm">MODULE-1</a></td>
+          </tr>
+          <tr>
+            <td>2.</td>
+            <td><a href="2DSM2.htm">MODULE-2</a></td>
+          </tr>
 
-  <marquee>UPDATED 13/10/2020 10:50AM</marquee>
-  <h1>Data Structure (DS).</h1>
-  <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
-
-  <table>
-    <tr>
-      <td>M1 L1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/sPTpClcwsbs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Data Structures, Classification of Data Structures, Data Structres operations.</td>   
-    </tr>
-    <tr>
-      <td>M1 L2.1</td>
-        <td><iframe width="310" height="180" src="https://www.youtube.com/embed/M1ZRl4d7_XY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-        <td>Introduction to Arrays, Structures, Nested Structures.</td> 
-      </tr>
-    <tr>
-      <td> L2.2</td>
-         <td><iframe width="310" height="180" src="https://www.youtube.com/embed/3TBrP0nOwo4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-         <td>Structure Operations,Self Referential Structure,Union.</td>
-     </tr>
-    <tr>
-      <td>M1 L3</td>
-         <td><iframe width="310" height="180" src="https://www.youtube.com/embed/vcpUIcTAFks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-         <td>Pointers and Dynamic Memory Allocation.</td>
-      </tr>
-    <tr>
-      <td>M1 L4</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/0nXxVtoLf6s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Dynamically Allocated Arrays,One-Dimensional Arrays, Two-Dimensional Arrays.</td> 
-    </tr>
-    <tr>
-      <td>M1 L5</td>
-       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/66ZRH2cfRR0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-       <td>ARRAY OPERATIONS:Traversing, Inserting, Deleting, Sorting and Searching</td>
-      </tr>
-    <tr>
-      <td>M1 L6</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/f9vjC7FDNBA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td> Polynomials and Sparse Matricies.</td>
-    </tr>
-    <tr>
-      <td>M1 L7.1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/NDmS7W0MDLU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Strings and Storing of Strings.</td>
-    </tr>
-    <tr>
-      <td>M1 L7.2</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/4r1PFvtQbIY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Different types of Pattern Matching Algorithms.</td>
-    </tr>
-    <tr>
-      <td>M2 L1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/W3-ZUJG7wB0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Definition, Stack Operations, Array Representation of Stacks, Stacks using Dynamic Arrays.</td>
-    </tr>
-    <tr>
-      <td>M2 L2</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/GPEQidLrgOE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Polish notation Infix to postfix conversion.</td>
-    </tr>
-    <tr>
-      <td>M2 L3</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/mz9XEbAYzrY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Evaluation of postfix expression</td>
-    </tr>
-    <tr>
-      <td>M2 L4.1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/BdA4BEZE9Rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Recursion, Factorial</td>
-    </tr>
-    <tr>
-      <td>M2 L4.2</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Gvf2cjcrZKY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>GCD, Fibonacci Sequence</td>
-    </tr>
-    <tr>
-      <td>M2 L5</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/i0akTu-D9cI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>GCD, Fibonacci Sequence</td>
-    </tr>
-    <tr>
-      <td>M2 L6</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/vAKtmvkEDXQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Definition, Array Representation, Queue Operations, Circular Queues</td>
-    </tr>
-    <tr>
-      <td>M2 L7.1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/gfGt197U6do" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Circular queues, Circular queues using Dynamic arrays</td>
-    </tr>
-    <tr>
-      <td>M2 L7.2.1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/wIKd3y4kDqk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Dequeues, Priority Queues, A Mazing Problem</td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td></td>
-    </tr>    
-  </table>
+          
+        </table>
 
 </body>
 
