--- a/2 YR CSE/2MAT/2MAT.htm
+++ b/2 YR CSE/2MAT/2MAT.htm
@@ -1,125 +1,169 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="..\..\responsive.css">
-  <title>MAT-III</title>
+  <title="MAT-|||">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
+<style>
+  * {
+    margin: -2;
+  }
+
+  body {
+    background-color: #f7f7ee;
+  }
+
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  td,
+  th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+    text-decoration: none;
+  }
+
+
+  table th {
+    background-color: white;
+    color: black;
+  }
+
+  a:link {
+    text-decoration: none;
+  }
+
+  a:visited {
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration:wavy;
+  }
+
+  a:active {
+    text-decoration: wavy;
+  }
+
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #b6eb7a;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
+
+  @media screen and (max-height: 450px) {
+    .sidenav {
+      padding-top: 15px;
+    }
+
+    .sidenav a {
+      font-size: 18px;
+    }
+  }
+
+  header {
+    background-color: #b6eb7a;
+    padding: 10px;
+    border: none;
+    font-size: 20px;
+  }
+
+  footer {
+    padding: 30px;
+    background-color: #17706e;
+    color: black;
+  }
+</style>
 
 <body>
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="index.htm">Home</a>
-    <a href="3CSE.htm">3 SEM CS</a>
-    <a href="CONTACT.htm">Contact</a>
-  </div>
-  <script>
-    function openNav() {
-      document.getElementById("mySidenav").style.width = "250px";
-    }
 
-    function closeNav() {
-      document.getElementById("mySidenav").style.width = "0";
-    }
-  </script>
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <a href="index.htm">Home</a>
+          <a href="2CSE.htm">3 SEM CS</a>
+          <a href="CONTACT.htm">Contact</a>
+        </div>
+        <header>
+          <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
+        </header>
+        <br>
+        <marquee>updated 12/10/2020</marquee>
+        <br>
+        <script>
+          function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+          }
 
-  <header>
-    <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
-  </header>
+          function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+          }
+        </script>
+        <br>
+        <table>
+          <tr>
+            <th>SR NO</th>
+            <th>MODULE</th>
+          </tr>
+          <tr>
+            <td>1.</td>
+            <td><a href="2MATM1.htm">MODULE-1</a></td>
+          </tr>
+          <tr>
+            <td>2.</td>
+            <td><a href="2MATM2.htm">MODULE-2</a></td>
+          </tr>
+          <td>3.</td>
+          <td><a href="2MATM3.htm">MODULE-3</a></td>
+        </tr>
+        <tr>
+          <td>4.</td>
+          <td><a href="2MATM4.htm">MODULE-4</a></td>
+        </tr>
+        <tr>
+            <td>5.</td>
+            <td><a href="2MATM5.htm">MODULE-5</a></td>
+          </tr>
 
-  <marquee>UPDATED 13/10/2020 10:50AM</marquee>
-  <h1>Engineering Mathematics (MAT-III).</h1>
-  <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
-
-  <table>
-    <tr>
-      <td>M1 L1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/P7cMU1xagTo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Laplace transforms, Laplace transform of elementary functions and Laplace transform of functions using standard rules.</td>
-    </tr>
-    <tr>
-      <td>M1 L2</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/GuzxfvQ5tZ0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Laplace transforms of Periodic functions and Unit functions.</td>
-    </tr>
-    <tr>
-      <td>M1 L3</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/tIY9isKKJPI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Inverse Laplace Transform and helps you to solve problems on Inverse Laplace transforms.</td>
-    </tr>
-    <tr>
-      <td>M1 L4</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/99xi1dbPVCQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Inverse Laplace transform by Convolution theorem and also helps you to find the solution of linear differential equation.</td>
-    </tr>
-    <tr>
-      <td>M2 L1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/MpJ8lWMZqug" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Periodic functions,Fourier series and Dirichlet's conditions.</td>
-    </tr>
-    <tr>
-      <td>M2 L2</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/cufB3wrCgso" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Fourier Series of even and odd functions.</td>
-    </tr>
-    <tr>
-      <td>M2 L3</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/lN-RIY5qREc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Half range Fourier series</td>
-    </tr>
-    <tr>
-      <td>M2 L4</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Bx3aiKV8HlE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Harmonic Analysis.</td>
-    </tr>
-    <tr>
-      <td>M3 L1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/lUWPuxnrYjk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Concept on Fourier TransformS for continuous time signal and solve problems based on it.</td>
-    </tr>
-    <tr>
-      <td>M3 L2</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/QmKMLKmt0OU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Analyze the concept on Fourier Sine and Cosine transforms and to solve problems based on it</td>
-    </tr>
-    <tr>
-      <td>M3 L3</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/qM9Vaqsw5iI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Basic theory of Z-transforms which help us to obtain the response or output sequence for discrete system.</td>
-    </tr>
-    <tr>
-      <td>M3 L4</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/b3Vwdw044ko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>To find the Inverse Z-transform and to solve difference equations.</td>
-    </tr>
-    <tr>
-      <td>M4 L1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/ir1U8sIog78" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>The techniques of solving ordinary differential equations numerically using Taylor's Series and Modified Euler's Method</td>
-    </tr>
-    <tr>
-      <td>M4 L2</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/0I9_yIuGaSs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Numerical techniques of solving ordinary differential equations using Fourth Order Runge Kutta and Milnes ,Adams Bashforth Predictor Corrector Method.</td>
-    </tr>
-    <tr>
-      <td>M5 L1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/RbzH0Z1tUOM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Techniques of solving second order ordinary differential equations numerically using Runge kutta method and Milne's predictor corrector Method.</td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td></td>
-    </tr>
-    
-  </table>
+          
+        </table>
 
 </body>
 
