--- a/3 YR CSE/5CSE.htm
+++ b/3 YR CSE/5CSE.htm
@@ -144,37 +144,37 @@
           </tr>
           <tr>
             <td>1.</td>
-            <td><a href="ME.htm">Management and Entreprenuer for IT Industry (ME)</a></td>
+            <td><a href="ME\ME.htm">Management and Entreprenuer for IT Industry (ME)</a></td>
           </tr>
           <tr>
             <td>2.</td>
-            <td><a href="CNS.htm">Computer Network and Security</a></td>
+            <td><a href="CNS\CNS.htm">Computer Network and Security</a></td>
           </tr>
           <tr>
             <td>3.</td>
-            <td><a href="DBMS.htm">Database Management System</a></td>
+            <td><a href="DBMS\DBMS.htm">Database Management System</a></td>
           </tr>
           <tr>
             <td>4.</td>
-            <td><a href="ATC.htm">Automata theory and computablilty</a></td>
+            <td><a href="ATC\ATC.htm">Automata theory and computablilty</a></td>
           </tr>
           <tr>
             <td>5.</td>
-            <td><a href="ADP.htm">Application development using python</a></td>
+            <td><a href="ADP\ADP.htm">Application development using python</a></td>
 
           </tr>
           <tr>
             <td>6.</td>
-            <td><a href="UP.htm">Unix programming</a></td>
+            <td><a href="UP\UP.htm">Unix programming</a></td>
           </tr>
           <tr>
             <td>7.</td>
-            <td><a href="CNL.htm">Computer network laboratory</a></td>
+            <td><a href="CNS\CNL.htm">Computer network laboratory</a></td>
 
           </tr>
           <tr>
             <td>8.</td>
-            <td><a href="DBMSL.htm">DBMS laboratory</a></td>
+            <td><a href="DBMS\DBMSL.htm">DBMS laboratory</a></td>
           </tr>
           <tr>
             <td>9.</td>
