--- a/2 YR ECE/3EC.htm
+++ b/2 YR ECE/3EC.htm
@@ -145,28 +145,28 @@
           </tr>
           <tr>
             <td>1.</td>
-            <td><a href="3ECMAT3.htm">Engineering Mathematics-3 (MAT).</a></td>
+            <td><a href="MAT3\MAT.htm">Engineering Mathematics-3 (MAT).</a></td>
           </tr>
           <tr>
             <td>2.</td>
-            <td><a href="3ECED.htm">Electronic Devices (ED).</a></td>
+            <td><a href="ED\ED.htm">Electronic Devices (ED).</a></td>
           </tr>
           <tr>
             <td>3.</td>
-            <td><a href="3ECNT.htm">Network Theory (NT).</a></td>
+            <td><a href="NT\NT.htm">Network Theory (NT).</a></td>
           </tr>
           <tr>
             <td>4.</td>
-            <td><a href="3ECDSD.htm">Digital System Design (DSD).</a></td>
+            <td><a href="DSD\DSD.htm">Digital System Design (DSD).</a></td>
           </tr>
           <tr>
             <td>5.</td>
-            <td><a href="3ECCOA.htm">COMPUTER ORGANISATION (CO).</a></td>
+            <td><a href="COA\COA.htm">COMPUTER ORGANISATION (CO).</a></td>
 
           </tr>
           <tr>
             <td>6.</td>
-            <td><a href="3ECPEI.htm">Power Electronics (PEI).</a></td>
+            <td><a href="PEI\PEI.htm">Power Electronics (PEI).</a></td>
           </tr>
 
         </table>
