--- a/2 YR ECE/NT/NTM2.htm
+++ b/2 YR ECE/NT/NTM2.htm
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="..\responsive.css">
+  <link rel="stylesheet" href="..\..\responsive.css">
   <title>NT</title>
 
 </head>
@@ -35,67 +35,7 @@
 
   <table>
 
-    <tr>
-      <td>M1 L1</td>
-      
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/KxXliw087K8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Definition of electric network, Elements of networks, classification of active elements, 
-        classification of networks are explained.</td>
-    </tr>
-    <tr>
-      <td>M1 L2</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/DGrR0JCNDFQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Reducing a network using Source Simplification such source transformation and source shifting techniques are explained.</td>
 
-    </tr>
-    <tr>
-      <td>M1 L3</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/TJ_39Ow2rSI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Reducing a network using Passive elements reduction such as Series- parallel combination and star – delta transformation.</td>
-
-    </tr>
-    <tr>
-      <td>M1 T1 (Problem)</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/SXEgbMuEGxQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Solve problems on network reduction using source transformation, source shifting and star-delta transformation are discussed.</td>
-
-    </tr>
-    <tr>
-      <td>M1 L4</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/NEMp9Qj9un0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Concepts of mesh current analysis and how to determine network parameters using mesh current analysis are explained.</td>
-
-    </tr>
-    <tr>
-      <td>M1 L5</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/d0MsFXzQm5k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Concepts of Node Voltage analysis and how to determine network parameters using Node Voltage analysis are explained.</td>
-
-    </tr>
-    <tr>
-      <td>M1 T2 (Problem)</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/IuR0aP7oiYw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>To find network parameters using mesh current analysis and node voltage analysis are explained with numeicals.</td>
-
-    </tr>
-    <tr>
-      <td>M1 T3 (Problem)</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/NMgefE2G-k4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>To find network parameters using mesh current analysis and node voltage analysis are explained with numeicals.</td>
-
-    </tr>
-    <tr>
-      <td>M1 T4 (Problem)</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/8ai2Use1hVc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>To find network parameters using mesh current analysis and node voltage analysis are explained with numeicals.</td>
-
-    </tr>
-    <tr>
-      <td>M1 T5 (Problem)</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/zBZczpPTsfc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>To find network parameters using mesh current analysis and node voltage analysis are explained with numeicals.</td>
-
-    </tr>
     <tr>
       <td>M2 L1</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/yN2ButCUjPk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
