--- a/index.htm
+++ b/index.htm
@@ -180,7 +180,10 @@
             <td>3.</td>
             <td><a href="2 YR ECE\3EC.htm">3 SEM ECE.</a></td>
           </tr>
-
+          <tr>
+            <td>4.</td>
+            <td><a href="3 YR ECE\5ECE.htm">5 SEM ECE.</a></td>
+          </tr>
         </table>
         <br>
 
