--- a/3 YR ECE/5ECE.htm
+++ b/3 YR ECE/5ECE.htm
@@ -156,7 +156,7 @@
           </tr>
           <tr>
             <td>4.</td>
-            <td><a href="ITC/ITC.htm">InformationTheoryandCoding. (ITC)</a></td>
+            <td><a href="ITC/ITC.htm">Information Theory and Coding. (ITC)</a></td>
           </tr>
           <tr>
             <td>5.</td>
