--- a/3 YR ECE/EW/EWM2.htm
+++ b/3 YR ECE/EW/EWM2.htm
@@ -29,7 +29,7 @@
   </header>
 
   <marquee>UPDATED 13/10/2020 10:50AM</marquee>
-  <h1>Analog and Digital Electronics (ADEL).</h1>
+  <h1>Electromagnetic Waves. (EW)</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
   <table>
