--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
   <title="vipin pvt web">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon (5).ico">
+    <link rel="manifest" href="manifest.json">
 </head>
 <style>
   * {
