--- a/3 YR CSE/ME/MEM1.htm
+++ b/3 YR CSE/ME/MEM1.htm
@@ -38,7 +38,7 @@
     <tr>
       <td>M1 L1</td>
       
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/5bROam5Epy4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/ocauOhuzcDc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
       <td>Nature of Management, Characteristics of Management, Functions of Management,<br> Scope of Management concepts are discussed.</td>
     </tr>
     <tr>
